# webFA

./: .env.example  .gitignore  AGENT_MANUAL.md  AGENT_VALIDATION.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  RELEASE_CHECKLIST.md  SECURITY.md  package-lock.json  package.json  pyproject.toml
apps/runtime/: cli.py  login.py  main.py  process.py
docs/: OPEN_SOURCE_READINESS.md  agent-entry-package.md  browser-runtime-roadmap.md
docs/abandoned/: transaction-gateway.md
docs/agent-integrations/: claude-code.md  codex.md  kimi-code.md  opencode.md
docs/reports/: P7_COMPLEX_VALIDATION_REPORT.md  P7_ENGINEERING_FINISH_REPORT.md  P7_VALIDATION_REPORT.md  P8_5_LOGIN_ONBOARDING_REPORT.md  P8_6_AUTH_TAKEOVER_REPORT.md  P8_7_RUNTIME_STABILITY_REPORT.md  P8_8_AGENT_INTEGRATION_HARDENING_REPORT.md  P8_KIMI_MCP_VALIDATION_REPORT.md  P8_VALIDATION_REPORT.md  p3-adversarial-acceptance.md  p3-github-read-context-adversarial-acceptance.md  p5-browser-runtime-core-freeze.md  p6-managed-chromium-closed-loop.md  phase1-adversarial-acceptance.md  phase2-adversarial-acceptance.md
docs/roadmap/: stage-roadmap-and-frozen-constraints.md
docs/security/: github-credential-handling.md  invariants.md
resources/blocked_paths/: github.yaml
resources/policies/: default_policy.yaml
resources/transactions/: github.patch_and_open_pr.yaml  hf.compare_and_publish.yaml  mock.patch_and_open_pr.yaml
tests/: adversarial_p2.py  adversarial_p3.py
tests/contract/: test_electron_runtime_contract.py  test_github_no_write_contract.py  test_mcp_security_contract.py
tests/fixtures/: agent_validation_page.html  search_results_page.html
tests/integration/: test_agent_lease_api.py  test_approval_api.py  test_browser_api.py  (+10 more)
webfa_desktop_runtime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+56 files in other folders)
