[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "webfa-desktop-runtime"
version = "0.2.0"
description = "WebFA Desktop v0.2 MCP stdio runtime"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "SQLAlchemy>=2.0",
  "alembic>=1.13",
  "PyYAML>=6.0",
  "mcp>=1.0.0",
  "httpx>=0.27",
  "playwright>=1.45"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27"
]

[tool.setuptools]
packages = [
  "apps",
  "apps.runtime",
  "apps.runtime.api",
  "apps.runtime.api.routes",
  "apps.runtime.mcp",
  "apps.runtime.worker",
  "storage",
  "schemas",
  "providers",
  "providers.mock",
  "providers.github",
  "providers.huggingface",
  "registry",
  "planner",
  "policy",
  "approvals",
  "execution",
  "verification",
  "proof",
  "audit",
  "workspace",
  "browser"
]

[tool.setuptools.package-dir]
"storage" = "packages/storage"
"schemas" = "packages/schemas"
"providers" = "packages/providers"
"providers.mock" = "packages/providers/mock"
"providers.github" = "packages/providers/github"
"providers.huggingface" = "packages/providers/huggingface"
"registry" = "packages/webfa-core/registry"
"planner" = "packages/webfa-core/planner"
"policy" = "packages/webfa-core/policy"
"approvals" = "packages/webfa-core/approvals"
"execution" = "packages/webfa-core/execution"
"verification" = "packages/webfa-core/verification"
"proof" = "packages/webfa-core/proof"
"audit" = "packages/webfa-core/audit"
"workspace" = "packages/webfa-core/workspace"
"browser" = "packages/webfa-core/browser"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = [".", "packages", "packages/webfa-core"]
